US-1895 testing a StackOverflow fix

--- a/cmn/fonts/logo/style.css
+++ b/cmn/fonts/logo/style.css
@@ -8,6 +8,16 @@
 	font-weight: normal;
 	font-style: normal;
 }
+@font-face {
+	font-family: 'logo';
+	src:url('sharewave.eot');
+	src:url('sharewave.eot?#iefix') format('embedded-opentype'),
+		url('sharewave.woff') format('woff'),
+		url('sharewave.ttf') format('truetype'),
+		url('sharewave.svg#sharewave') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
 
 /* Use the following CSS code if you want to use data attributes for inserting your icons */
 [data-logo]:before {
